# opencode-tray-rs

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  tray.rs
src-tauri/src/commands/: mod.rs  settings.rs  usage.rs  window.rs
src-tauri/src/db/: helper.rs
src-tauri/src/services/: ccswitch.rs  hermes.rs  mod.rs  opencode.rs  paths.rs  workbuddy.rs  zcode.rs
src/components/floating-bar/: FloatingBar.tsx
src/components/panel/: Heatmap.tsx  ModelList.tsx  Panel.tsx  SourceList.tsx  StatsCards.tsx  TrendChart.tsx
src/components/settings/: Settings.tsx
src/hooks/: useUsageData.ts
src/lib/: commands.ts
src/styles/: globals.css
