[package]
name = "opencode-tray-rs"
version = "0.1.0"
description = "OpenCodeTray Rust 重写版 - 监控 AI 工具 token 消耗量"
authors = ["OpenCodeTray"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "opencode_tray_rs_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
doctest = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-store = "2"
dirs = "5.0"
rusqlite = { version = "0.31", features = ["bundled"] }
sysinfo = "0.33"
thiserror = "2.0"
anyhow = "1.0"
once_cell = "1.21"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }

[target.'cfg(any(target_os = "macos", target_os = "windows", target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "2"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "s"
panic = "unwind"
strip = "symbols"
